--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/btn_dynamic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Banner added dynamically"/>
+        android:text="@string/banner_added_dynamically"/>
 
     <Button
         android:id="@+id/btn_xml"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Banner added in xml"/>
+        android:text="@string/banner_added_in_xml"/>
 
 </LinearLayout>
